[package]
name = "archive_is"
version = "0.2.0"
edition = "2021"
authors = ["Shane Stephenson <stephenson.shane.a@gmail.com>"]
readme = "README.md"
description = "A small crate to use for archiving and accessing already-archived websites on https://archive.is"
homepage = "https://github.com/UnsafeOats/archive_rs"
repository = "https://github.com/UnsafeOats/archive_rs"
license = "MIT"
keywords = ["archive", "paywall"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
scraper = "0.15.0"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
urlencoding = "2.1.2"
